--- a/src/templates/disease.html
+++ b/src/templates/disease.html
@@ -8,13 +8,13 @@
     <title>Diseases</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="{{url_for('static', filename='img/health-logo.jpg')}}">
+    <link rel="icon" href="{{url_for('static', filename='img/disease2page.png')}}">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
-    
+
     <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
-   
+
 </head>
 
 <body>
@@ -44,8 +44,26 @@
                     </div>
                 </div>
             </nav>
+            <div class="container">
+                <div class="row">
+                    <div class="top-section-info">
+                        <div class="top-section-logo text-center">
+                            <img src="{{url_for('static',filename='img/disease2page.png')}}" alt="logo"
+                                style="width:700px;height: 500px; margin-top: -30px;" class="img-responsive">
+
+                        </div>
+
+                        <div class="overlay-detail text-center">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         </div>
     </section>
+
 
     <!--about-->
     <section id="about" class="section-padding">
@@ -71,7 +89,7 @@
                                 <p>Together CVD resulted in
                                     17.9 million deaths (32.1%) in 2015, up from 12.3 million (25.8%) in 1990.
                                 </p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -82,7 +100,7 @@
                                 <p>Breast cancer is better to be used by
                                     health professionals who want to save time and have some experience in the
                                     related area.</p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
 
                             </div>
                         </div>
@@ -94,7 +112,7 @@
                                 <p>Diabetes mellitus, commonly known as just diabetes, is a group of metabolic disorders
                                     characterized by a high blood sugar level over a prolonged period of time.
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
 
                         </div>
@@ -103,8 +121,9 @@
                                     aria-hidden="true"></i> </div>
                             <div class="more-features-box-text-description">
                                 <h3>Thyroid Detection</h3>
-                                <p>The thyroid, or thyroid gland, is an endocrine gland in vertebrates.It is located at the front of the neck, below the Adam's apple. </p>
-                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                                <p>The thyroid, or thyroid gland, is an endocrine gland in vertebrates.It is located at
+                                    the front of the neck, below the Adam's apple. </p>
+                                <a href="#" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -115,7 +134,7 @@
                                 <p>Pneumonia is an inflammatory condition of the lung primarily affecting the small air
                                     sacs known as alveoli.
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -127,7 +146,7 @@
                                     types of tumors:
                                     malignant tumors and benign (non-cancerous) tumors
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
                         <div class="more-features-box-text">
@@ -137,7 +156,7 @@
                                 <h3>Malaria Detection</h3>
                                 <p>Malaria is a mosquito-borne infectious disease that affects humans and other animals
                                 </p>
-                                <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
 
@@ -149,6 +168,7 @@
                                 <p>As this project is done for educational purposes, our machine may not predict
                                     the expected result.
                                 </p>
+                                <a href="" style="color: #0cb8b6; padding-top:10px;">Predict with user input</a>
                             </div>
                         </div>
                     </div>
@@ -161,7 +181,7 @@
     <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
     <script src="{{url_for('static',filename='js/custom.js')}}"></script>
 
-   
+
 </body>
 
 </html>
