--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,12 +13,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/font-awesome.min.css')}}">
-  <link rel="stylesheet" type="text/css"  href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
-  <link rel="icon" href="{{url_for('static', filename='img/health-logo.jpg')}}">
-  
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/bootstrap.min.css')}}">
+  <link rel="icon" href="{{url_for('static', filename='img/disease2page.png')}}">
+
   <!-- Custom css file -->
-  <link rel="stylesheet"  href="{{url_for('static',filename='/css/style.css')}}">
-  
+  <link rel="stylesheet" href="{{url_for('static',filename='/css/style.css')}}">
+
 
 </head>
 
@@ -36,8 +36,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="{{ url_for('static',filename='/img/logo.png')}}" class="img-responsive"
-                  style="width:400px;height: 50px; margin-top: -18px;"></a>
+              <a class="navbar-brand" href="#"><img src="{{ url_for('static',filename='/img/logo.png')}}"
+                  class="img-responsive" style="width:400px;height: 50px; margin-top: -18px;"></a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
               <ul class="nav navbar-nav">
@@ -57,16 +57,17 @@
         <div class="row">
           <div class="top-section-info">
             <div class="top-section-logo text-center">
-              <img src="{{url_for('static',filename='img/logo.png')}}" alt="logo" style="width:400px;height: 150px; margin-top: -30px;"
-                class="img-responsive">
+              <img src="{{url_for('static',filename='img/logo.png')}}" alt="logo"
+                style="width:400px;height: 150px; margin-top: -30px;" class="img-responsive">
             </div>
             <div class="top-section-text text-center">
               <h1 class="white">Onsite Health Diagnostic</h1>
               <p>Input the facts and see your result in just one click ! Our model will try to predict your disease.
                 <br>
-                We pray for your good health!</p>
-                <a href="{{url_for('disease')}}" class="btn btn-appoint">Predict the Disease</a>
-             
+                We pray for your good health!
+              </p>
+              <a href="{{url_for('disease')}}" class="btn btn-appoint">Predict the Disease</a>
+
             </div>
             <div class="overlay-detail text-center">
               <a href="#prediction-section"><i class="fa fa-angle-down"></i></a>
@@ -192,7 +193,7 @@
       </div>
     </div>
   </section>
-  <!--/ about-->
+  <!-- about-->
   <!--Developers-->
   <section id="developer" class="section-padding">
     <div class="container">
@@ -203,7 +204,8 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developernishant.jpeg')}}" alt="Nishant Banjade" class="team-img">
+            <img src="{{url_for('static',filename='img/Developernishant.jpeg')}}" alt="Nishant Banjade"
+              class="team-img">
             <div class="caption">
               <h3>Nishant Banjade</h3>
               <p>Machine learning Developer</p>
@@ -232,7 +234,8 @@
         </div>
         <div class="col-md-3 col-sm-3 col-xs-6">
           <div class="thumbnail">
-            <img src="{{url_for('static',filename='img/Developerapsara.jpeg')}}" alt="Apsara Budhathoki" class="team-img">
+            <img src="{{url_for('static',filename='img/Developerapsara.jpeg')}}" alt="Apsara Budhathoki"
+              class="team-img">
             <div class="caption">
               <h3>Apsara Budhathoki</h3>
               <p>Web Design & Development</p>
@@ -270,7 +273,8 @@
           </div>
           <div class="tech-info">
             <!-- tools icon-->
-            <a href="https://scikit-learn.org/"><img src="{{url_for('static',filename='img/sklearn.png')}}" alt="sklearnimage" class="img-responsive"></a>
+            <a href="https://scikit-learn.org/"><img src="{{url_for('static',filename='img/sklearn.png')}}"
+                alt="sklearnimage" class="img-responsive"></a>
             <!-- Tools -->
             <h3>Machine<span>Learning</span></h3>
           </div>
@@ -284,7 +288,8 @@
           </div>
           <div class="tech-info">
             <!--tools icon -->
-            <a href="https://www.tensorflow.org/api_docs"><img src="{{url_for('static',filename='img/tensorflow.jpg')}}" alt="tensorflow-image" class="img-responsive"></a>
+            <a href="https://www.tensorflow.org/api_docs"><img src="{{url_for('static',filename='img/tensorflow.jpg')}}"
+                alt="tensorflow-image" class="img-responsive"></a>
             <!-- tools-->
             <h3>Deep<span>Learning</span></h3>
           </div>
@@ -298,8 +303,8 @@
           </div>
           <div class="tech-info">
             <!--tools icon -->
-            <a href="https://flask.palletsprojects.com/en/2.0.x/"><img src="{{url_for('static',filename='img/flask-logo.png')}}" alt="flask-logo"
-                class="img-responsive"></a>
+            <a href="https://flask.palletsprojects.com/en/2.0.x/"><img
+                src="{{url_for('static',filename='img/flask-logo.png')}}" alt="flask-logo" class="img-responsive"></a>
             <!-- Tools -->
             <h3>Web<span>Development</span></h3>
           </div>
@@ -366,9 +371,9 @@
   <script src="{{url_for('static',filename='js/jquery.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/bootstrap.min.js')}}"></script>
   <script src="{{url_for('static',filename='js/custom.js')}}"></script>
- 
 
-  
+
+
 </body>
 
 </html>
